force-app/main/default/objects/Integration_Field_Mapping__c/Integration_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Integration Field Mapping</label>
    <nameField>
        <displayFormat>INT-FLD-{0000}</displayFormat>
        <label>Integration Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>