force-app/main/default/objects/Integration_Field_Mapping__c/fields/Conditional_Rule__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Rule__c</fullName>
    <description>JSON condition for when to apply</description>
    <label>Conditional Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>