force-app/main/default/objects/Integration_Field_Mapping__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>