force-app/main/default/objects/Integration_Field_Mapping__c/fields/External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field__c</fullName>
    <description>API name of the external ID field used for upsert operations</description>
    <label>External Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>