force-app/main/default/objects/Integration_Field_Mapping__c/fields/Mapping_Name__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Name__c</fullName>
    <label>Mapping Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>