force-app/main/default/objects/Integration_Field_Mapping__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Processing order</description>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>