force-app/main/default/objects/Integration_Field_Mapping__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>Source field API name or JSON path</description>
    <label>Source Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>