force-app/main/default/objects/Integration_Field_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>Target field API name or JSON key</description>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>