force-app/main/default/objects/Integration_Field_Mapping__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Target SObject API name (for inbound)</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>