force-app/main/default/objects/Integration_Field_Mapping__c/fields/Transform_Expression__c.field-meta.xml
<CustomField>
    <fullName>Transform_Expression__c</fullName>
    <description>Transformation logic</description>
    <label>Transform Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>